--- a/assignment_1/form.html
+++ b/assignment_1/form.html
@@ -65,12 +65,12 @@
 
                 <label for="region">Your Region:</label>
                 <select id ="region">
-                    <option value="debit card">Africa</option>
-                    <option value="debit card">America</option>
-                    <option value="visa">Antartica</option>
-                    <option value="debit card">Asia</option>
-                    <option value="debit card">Australia</option>
-                    <option value="credit card">Europe</option>
+                    <option>Africa</option>
+                    <option>America</option>
+                    <option>Antartica</option>
+                    <option>Asia</option>
+                    <option>Australia</option>
+                    <option>Europe</option>
                     
                 </select>
             </div>
